# assistant-vs-claw

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
demos/: run_comparison.py
docs/: CHOOSING.md  ESSAY_HOOK.md  FLEET_MAPPING.md  _config.yml  index.md
examples/: 01_assistant_onboarding.py  02_claw_email_agent.py  03_claw_product_bot.py  04_side_by_side_slack.py  05_claw_vendor_intake.py
notebooks/: assistant_vs_claw.ipynb
src/identity_models/: __init__.py  assistant.py  audit.py  claw.py  cli.py  comparison.py  credentials.py  data.py  fixtures.py  inbox.py  memory.py  types.py
tests/: test_anti_patterns.py  test_audit.py  test_comparison_snapshot.py  test_email_claw.py  test_identity_boundary.py  test_inbox.py
