[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-vs-claw"
version = "0.2.0"
description = "Illustrate on-behalf-of Assistants vs fixed-identity Claws in agent authorization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cobus Greyling" }]
keywords = ["agents", "authorization", "langsmith", "fleet", "oauth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/cobusgreyling/assistant-vs-claw"
Documentation = "https://cobusgreyling.github.io/assistant-vs-claw/"
Repository = "https://github.com/cobusgreyling/assistant-vs-claw"
Issues = "https://github.com/cobusgreyling/assistant-vs-claw/issues"

[project.scripts]
avc-compare = "identity_models.cli:run_comparison_main"
avc-onboarding = "identity_models.cli:run_assistant_onboarding"
avc-email = "identity_models.cli:run_claw_email"
avc-product = "identity_models.cli:run_claw_product"
avc-slack = "identity_models.cli:run_side_by_side_slack"
avc-vendor = "identity_models.cli:run_claw_vendor_intake"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["identity_models"]